--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^8.3.10",
+    "apollo-server-express": "^3.6.7",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "graphql": "^16.3.0",
     "helmet": "^5.0.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
