--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@graphql-tools/schema": "^8.3.10",
     "apollo-server-express": "^3.6.7",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.3",
-    "graphql": "^16.3.0",
+    "graphql": "^16.4.0",
     "helmet": "^5.0.2",
     "mysql2": "^2.3.3",
     "react": "^17.0.0",
