--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@graphql-tools/schema": "^8.3.10",
     "apollo-server-express": "^3.6.7",
     "compression": "^1.7.4",
