--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@graphql-tools/schema": "^8.3.10",
     "apollo-server-express": "^3.6.7",
+    "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "graphql": "^16.4.0",
     "helmet": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
