--- a/package.json
+++ b/package.json
@@ -20,18 +20,24 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@graphql-tools/schema": "^8.3.10",
     "apollo-server-express": "^3.6.7",
+    "apollo-upload-client": "^17.0.0",
+    "aws-sdk": "^2.1125.0",
     "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "graphql": "^16.4.0",
+    "graphql-upload": "^13.0.0",
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "react": "^17.0.0",
+    "react-cropper": "^2.1.8",
     "react-dom": "^17.0.0",
+    "react-dropzone": "^13.0.0",
     "react-helmet": "^6.1.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-modal": "^3.15.1",
     "sequelize": "^6.19.0",
     "sequelize-cli": "^6.4.1",
     "winston": "^3.7.2"
