--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-helmet": "^6.1.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.15.1",
+    "react-router-dom": "^6.3.0",
     "sequelize": "^6.19.0",
     "sequelize-cli": "^6.4.1",
     "winston": "^3.7.2"
